; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_sizei.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_sizei.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@CHARSETINSTSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sizei(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %14 [
    i32 132, label %8
    i32 131, label %8
    i32 128, label %10
    i32 129, label %13
    i32 130, label %13
    i32 137, label %13
    i32 135, label %13
    i32 138, label %13
    i32 134, label %13
    i32 136, label %13
    i32 133, label %13
    i32 139, label %13
  ]

8:                                                ; preds = %1, %1
  %9 = load i32, i32* @CHARSETINSTSIZE, align 4
  store i32 %9, i32* %2, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* @CHARSETINSTSIZE, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 2, i32* %2, align 4
  br label %15

14:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %13, %10, %8
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
